--- a/IconGame/app/src/main/res/layout/activity_menu.xml
+++ b/IconGame/app/src/main/res/layout/activity_menu.xml
@@ -5,46 +5,47 @@
     android:background="#0099cc"
     tools:context="com.iut.german_marabel.icongame.MenuActivity">
 
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
-    <TextView
-        android:id="@+id/fullscreen_content"
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:keepScreenOn="true"
-        android:text="@string/dummy_content"
-        android:textColor="#33b5e5"
-        android:textSize="50sp"
-        android:textStyle="bold" />
+        android:layout_gravity="center"
+        android:weightSum="1">
 
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:id="@+id/imageView"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.37"
+            android:src="@drawable/icon" />
 
-        <LinearLayout
-            android:id="@+id/fullscreen_content_controls"
-            style="?metaButtonBarStyle"
-            android:layout_width="match_parent"
+        <Button
+            android:layout_width="223dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/black_overlay"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent">
+            android:text="Jouer"
+            android:id="@+id/play"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.08"
+            android:onClick="sendMessage"/>
 
-            <Button
-                android:id="@+id/dummy_button"
-                style="?metaButtonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/dummy_button" />
+        <Button
+            android:layout_width="223dp"
+            android:layout_height="wrap_content"
+            android:text="Préférences"
+            android:id="@+id/option"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.08"
+            android:onClick="sendMessage"/>
 
-        </LinearLayout>
-    </FrameLayout>
-
+        <Button
+            android:layout_width="223dp"
+            android:layout_height="wrap_content"
+            android:text="Leaderboard"
+            android:id="@+id/score"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="0.08"
+            android:onClick="sendMessage"/>
+    </LinearLayout>
 </FrameLayout>
