--- a/IconGame/app/src/main/res/layout/activity_menu.xml
+++ b/IconGame/app/src/main/res/layout/activity_menu.xml
@@ -5,24 +5,50 @@
     android:background="#0099cc"
     tools:context="com.iut.german_marabel.icongame.MenuActivity">
 
+    <android.support.v4.app.FragmentTabHost
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@android:id/tabhost"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <TabWidget
+                android:id="@android:id/tabs"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"/>
+
+            <FrameLayout
+                android:id="@android:id/tabcontent"
+                android:layout_width="fill_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+    </android.support.v4.app.FragmentTabHost>
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="center"
+        android:layout_height="255dp"
+        android:layout_gravity="center_horizontal|bottom"
         android:weightSum="1">
 
         <Button
+            android:layout_marginBottom="10dp"
             android:layout_width="223dp"
             android:layout_height="wrap_content"
             android:text="Jouer"
             android:id="@+id/play"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.08"
-            android:onClick="sendMessage"/>
+            android:onClick="sendMessage" />
 
         <Button
+            android:layout_marginBottom="10dp"
             android:layout_width="223dp"
             android:layout_height="wrap_content"
             android:text="Préférences"
@@ -39,5 +65,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.08"
             android:onClick="sendMessage"/>
+
     </LinearLayout>
+
 </FrameLayout>
