--- a/IconGame/app/src/main/res/layout/activity_game.xml
+++ b/IconGame/app/src/main/res/layout/activity_game.xml
@@ -7,4 +7,12 @@
     android:id="@+id/relLayout"
     android:padding="0dp">
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/progressBar"
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
