--- a/IconGame/app/src/main/res/layout/activity_menu.xml
+++ b/IconGame/app/src/main/res/layout/activity_menu.xml
@@ -13,8 +13,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:layout_height="320dp"
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal|top">
 
             <TabWidget
                 android:id="@android:id/tabs"
@@ -27,6 +28,8 @@
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1" />
+
+
         </LinearLayout>
 
     </android.support.v4.app.FragmentTabHost>
