--- a/IconGame/app/src/main/res/layout/activity_game.xml
+++ b/IconGame/app/src/main/res/layout/activity_game.xml
@@ -15,4 +15,15 @@
         android:layout_alignParentStart="true"
         android:id="@+id/progressBar"
         android:layout_alignParentEnd="true" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/progressBar"
+        android:id="@+id/scoreTextView"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        tools:textAllCaps="false"
+        android:textAlignment="center" />
 </RelativeLayout>
